Fix text alignment + CV punctuation

--- a/main.css
+++ b/main.css
@@ -36,11 +36,12 @@
     margin-top: 20px;
     margin-bottom: 20px;
     font-size: 16px;
-    text-align: justify;
+    text-align: left;
 }
 
 .paragraph {
     margin-bottom: 1em;
+    text-align: justify;
 }
 
 .reference-header h4 {
